typescript/checker/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithProtecteds2.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            300,
        ),
        hi: BytePos(
            301,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithProtecteds2.ts:24:5
   |
24 | var i: I5;
   |     ^

error: AssignFailed {
    left: TsKeywordType(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    315,
                ),
                hi: BytePos(
                    321,
                ),
                ctxt: #0,
            },
            kind: TsStringKeyword,
        },
    ),
    right: TsIndexedAccessType(
        TsIndexedAccessType {
            span: Span {
                lo: BytePos(
                    325,
                ),
                hi: BytePos(
                    327,
                ),
                ctxt: #0,
            },
            obj_type: TsTypeRef(
                TsTypeRef {
                    span: Span {
                        lo: BytePos(
                            303,
                        ),
                        hi: BytePos(
                            305,
                        ),
                        ctxt: #0,
                    },
                    type_name: Ident(
                        Ident {
                            span: Span {
                                lo: BytePos(
                                    303,
                                ),
                                hi: BytePos(
                                    305,
                                ),
                                ctxt: #0,
                            },
                            sym: Atom('I5' type=inline),
                            type_ann: None,
                            optional: false,
                        },
                    ),
                    type_params: None,
                },
            ),
            index_type: TsKeywordType(
                TsKeywordType {
                    span: Span {
                        lo: BytePos(
                            325,
                        ),
                        hi: BytePos(
                            327,
                        ),
                        ctxt: #0,
                    },
                    kind: TsStringKeyword,
                },
            ),
        },
    ),
    cause: [],
}
  --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithProtecteds2.ts:25:8
   |
25 | var r: string = i.z;
   |        ^^^^^^^^^^^^

